# BRAIN

./: .gitignore  CMakeLists.txt  README.md
include/: BaselineSbm.h  SbmVersion.h  SbmVersion.h.in  VaryingAlpha.h  VaryingPi.h  VaryingTau.h  main.h
src/: BaselineSbm.cpp  VaryingAlpha.cpp  VaryingPi.cpp  VaryingTau.cpp  main.cpp
